--- a/index.html.html
+++ b/index.html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <title>Como surgiu o mascote do Android?</title>
 </head>
@@ -30,7 +30,7 @@
 
             <picture>
                 <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png">
-                <img src="imagens/dan-droids.png" alt="Primeiro mascote do Android">
+                <img src="imagens/dan-droids.png" alt="Primeiro mascote do Android" width="100%">
             </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong></p>.
@@ -41,7 +41,7 @@
 
             <picture>
                 <source media="(max-width: 650px )" srcset="imagens/irina-blok-pq.jpg">
-                <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
+                <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid" width="100%">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
